css/styles.css
body {
    width: 100%!important;
    height: 100%;
    overflow-x: hidden;
}

html {
    width: 100%;
    height: 100%;
}

@media(min-width:767px) {
    .navbar {
        padding: 20px 0;
        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
        transition: background .5s ease-in-out,padding .5s ease-in-out;
        font-family: 'Roboto';
        background-color: #DDDDDC;
    }

    .top-nav-collapse {
        padding: 0;
    }
}


.banner-content {
   background: url('https://images.unsplash.com/photo-1417052800325-788e0eaf22c6?dpr=1.25&auto=format&fit=crop&w=1920&h=350&q=80&cs=tinysrgb&crop=') no-repeat center center;
   background-size: cover;
   text-align: center;
}

.jumbotron {
  background-color: rgba(0, 0, 0, 0.2);
  color: white;
  margin-top: 8%;
}

#sameline {
  display: inline;
  text-align:   justify;
  text-transform: uppercase;
  font-size: 20px;
  color: #a6e6fc;
  transition: 1s;
}


#sameline:hover{
  color: white;
  letter-spacing: 3px;
  text-decoration: none;
  font-size: 17pt;

}

a:visited {
  text-decoration: none;
}

.about-section {

  min-height: 100%;
  padding-top: 5%;
  background: #F7F9FE;
}

.about-box {
  background: #9cc2f4;
  padding: 5%
}

.portfolio-section {

  min-height: 100%;
  padding-top: 5%;
  background: #9cc2f4;
  /*overflow-y: scroll; */
  padding-bottom: 5%;
}

.contact-section {
  height: 100%;
  min-height: 640px;
  padding-top: 5%;
  background: #F7F9FE;
}

hr {
  border: 0;
  clear:both;
  display:block;
  width: 96%;
  background-color:#9cc2f4;
  height: 1.5px;
}

.tab-content {
  text-align: center;
}

.nav-tabs > li > a {
  color: black;
  text-align: center;
  background-color: #DCE8EB;
  transition: 0.6s;

}


.tab-content{
    padding:5px;
    background-color: #F7F9FE;

}

.nav-tabs > li > a:hover{
  background-color: #F7F9FE ;
    border-bottom: none;
}

.active a {
  background-color: #F7F9FE ;
  color: black;

}

.category {
  font-family: 'Open Sans';
  text-transform: uppercase;
  letter-spacing: 2px;
}



h1{
  font-family: 'Open Sans';
  letter-spacing: 5px;
  text-transform: uppercase;
  padding-bottom: 1%;
}

h3 {
  font-family: 'Open Sans';
  letter-spacing: 5px;
  text-transform: uppercase;
  margin-top: 0;
}

p {
  font-family: 'Roboto';
  line-height: 30px;
}

.git-link{
  font-family: 'Open Sans';
  text-transform: uppercase;
  font-size: 10;
  margin-left: 10px;
  margin-right: 10px;
  transition: 0.6s;


}

.git-link:hover{
    color: #9cc2f4;
    text-decoration: none;
}

.desc {
  border-radius: 4px;
  padding: 3%;
  padding-top: 1%;
  padding-bottom: 1%;

  max-height: 170px;
  border-left: 2px #9cc2f4 solid;


}

.thumbnail {
  margin-bottom: 0;
}

.pblock{

    padding-left: 2%;
    margin-right: 0;
    margin-left: 0;
    margin-top: 2%;
    padding-bottom: 2%;

}

.dblock{
  padding-top: 2%;
}



.caption {
 margin: 0 auto;
 margin-top: -40%;
 text-align:center;
 color: transparent;
 font-family: 'Roboto';

}

.mouseover {
    transition: 1s all;
}

.mouseover:hover{
  -moz-transform: scale(1.1);
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
  cursor: pointer;
}

.hovertext {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  opacity: 0;
  transition: 1s;
  color:white;
  font-size: 24px;
  /* Simulate a 1px black stroke */
  text-shadow:
   -1px -1px 0 #000,
    1px -1px 0 #000,
    -1px 1px 0 #000,
     1px 1px 0 #000;
}

.mouseover:hover .hovertext{
  cursor: pointer;
  opacity: 1;
}


.contact-box{
  background: #9cc2f4;
  padding: 5%;
}

.cont {
  text-align: center;
  text-transform: uppercase;
  font-size: 20px;
  color: white;
}

